<resources>
    <string name="app_name">Pillow_Companion</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_insights">Insights</string>
    <string name="title_settings">Settings</string>
    <string name="batterySaver">Batter Saver</string>
    <string name="blank" />
    <string name="connections">Connections</string>
    <string name="reset">Reset</string>
    <string name="sensor_rates">Sensor Rates</string>
    <string name="light">Light</string>
    <string name="temp">Temp</string>
    <string name="emg">EMG</string>
    <string name="acc">Acc</string>
    <string name="ecg">ECG</string>
    <string name="personal_info">Personal Information</string>
    <string name="height">Height (in inches)</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="new_sleep">Start Recording</string>
    <string name="no_insights">There are currently no Insights. Start a sleep recording to gather data and gain insights on ways to improve your sleep.</string>
    <string name="No_Data">You currently have no data to display. Start a sleep recording to gather data and see your graphs.</string>
    <string name="welcome">Welcome!</string>
    <string name="monitor_text">Sleep Monitoring in Progress</string>
    <string name="done">Done</string>
    <string name="alarm_set">Alarm set for:</string>
    <string name="Test_Time">7:30 AM</string>
    <string name="logo_description">Sleep App Logo</string>
    <string name="next">Next</string>
    <string name="reset_user">Reset User</string>
    <string name="date">Selected Date:</string>
    <string name="bluetoothSearch">Searching For Bluetooth Device</string>
    <string name="cancel">Cancel</string>
    <string name="tempchart">Tempurature</string>
    <string name="ecgchart">ECG</string>
    <string name="emgchart">EMG</string>
    <string name="lightchart">Light</string>
</resources>
